# jeneration-lab

./: .gitignore  README.md  example.py  generator_image.py  pyproject.toml
configs/: core_config.yaml  experiment_demo.yaml  rater_config.yaml
src/jenerationlab/core/: experiment.py  generators.py  runner.py  variables.py
src/jenerationlab/rater/: rater.py
src/jenerationlab/schemas/: base.py  measurements.py
src/jenerationlab/storage/: storage_manager.py
src/jenerationlab/variables/: int_variable.py  registry.py  variable.py
src/jenerationlab/viewer/: constants.py  utils.py  viewer.py
