[tool.poetry]
name = "jenerationlab"
version = "0.1.0"
description = "GenAI experimentation suite for image and text generation."
authors = ["Warren Davies"]
license = "MIT"
readme = "README.md"
# This ensures poetry looks in the src folder
packages = [{include = "jenerationlab", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.30.0"
pandas = "^2.2.0"
plotly = "^5.18.0"
sqlalchemy = "^2.0.0"  # For the storage layer
pyyaml = "^6.0.1"      # For reading experiment configs
# Your existing tools
imagejenerator = "*"
textjenerator = "*"
jenerationutils = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"

[tool.poetry.scripts]
# This allows you to run 'jenerate-run' from the terminal
jenerate-run = "jenerationlab.core.runner:main"
# This allows you to run the UI easily
jenerate-ui = "jenerationlab.app.launcher:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"